# supersocks-url-scraper

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: PUBLIC_DEPLOYMENT.md  PUBLIC_READER_PARITY.md
examples/: fetch-strategies.celeste.seed.json  fetch-strategies.media.seed.json
scripts/: browser_profile_probe.py  discover_source.py  discover_strategy.py  seed_strategy_cache.py
src/supersocks_url_scraper/: __init__.py  browser_fetcher.py  cli.py  reader.py  source_discovery.py  summary_provider.py
tests/: test_cli_service.py  test_discover_source.py  test_discover_strategy.py  test_public_regression_corpus.py  test_reader.py  test_source_discovery.py  test_summary_provider.py
tests/fixtures/: public_regression_corpus.json
