[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "supersocks-url-scraper"
version = "0.2.0"
description = "Small dependency-light URL reader/scraper that extracts page titles and readable summaries."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Contributors" }]
keywords = ["url", "scraper", "reader", "metadata", "summary", "html"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
article = ["beautifulsoup4>=4.12", "lxml>=5.2", "trafilatura>=1.12", "readability-lxml>=0.8.1"]
pdf = ["PyMuPDF>=1.24"]
full = ["beautifulsoup4>=4.12", "lxml>=5.2", "trafilatura>=1.12", "readability-lxml>=0.8.1", "PyMuPDF>=1.24"]
browser = ["cloakbrowser>=0.4.8"]
test = ["pytest>=8.0"]

[project.scripts]
supersocks-url-scraper = "supersocks_url_scraper.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
